...
        android:background="?attr/colorPrimary"
        android:theme="@style/AppTheme.AppBarOverlay"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <EditText
        android:id="@+id/Text_chat_log"
        android:layout_width="0dp"
        android:layout_height="45dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="8dp"
        android:layout_marginBottom="8dp"
...
        android:ems="10"
        android:hint="@string/message_hint"
        android:inputType="textPersonName"
        android:paddingLeft="16dp"
        android:paddingRight="16dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toStartOf="@+id/send_button_chat_log"
        app:layout_constraintStart_toStartOf="parent" />

    <Button
        android:id="@+id/send_button_chat_log"
        android:layout_width="wrap_content"
        android:layout_height="45dp"
...
