...
    <string name="invalid_password">Le mot de passe doit avoir plus de 6 caractères</string>
    <string name="login_failed">La connexion n\'a pas réussi</string>
    <string name="createAccount">Créer un compte</string>
    <string name="title_activity_program">"Programmes"</string>
    <string name="title_activity_statistics">"Statistiques"</string>
    <string name="title_activity_messaging">"Messagerie"</string>
    <string name="action_settings">"Paramètres"</string>
    <string name="action_history">"Historique"</string>
    <string name="action_logout">"Déconnexion"</string>
    <string name="action_create">"Créer le compte"</string>

    <string name="language_setting">Option de langue</string>
    <string name="application_settings">Options de l\'application</string>
    <string name="language">Langue</string>
    <string name="audio_setting">Désactiver l\'audio</string>
...
